Fix product card width on mobile.

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -627,6 +627,7 @@
 
 			@media only screen and ( max-width: 768px ) {
 				max-width: none;
+				width: 100%;
 			}
 
 			a {
